crates/executor/src/tests/sql/ddl/snapshots/merge_into/query_merge_into_explain.snap
---
source: crates/executor/src/tests/sql/ddl/merge_into.rs
description: "\"EXPLAIN MERGE INTO merge_target USING merge_source ON merge_target.id = merge_source.id WHEN MATCHED THEN UPDATE SET merge_target.description = merge_source.description\""
info: "Setup queries: CREATE TABLE embucket.public.merge_target (ID INTEGER, description VARCHAR); CREATE TABLE embucket.public.merge_source (ID INTEGER, description VARCHAR); INSERT INTO embucket.public.merge_target VALUES (1, 'existing row'); INSERT INTO embucket.public.merge_source VALUES (1, 'updated row')"
---
Ok(
    [
        "+---------------+----------------------------------------------------------------------------------------------------------------------------------+",
        "| plan_type     | plan                                                                                                    |",
        "+---------------+----------------------------------------------------------------------------------------------------------------------------------+",
        "| logical_plan  | MergeIntoSink                                                                                                    |",
        "|               |   Projection: embucket.public.merge_target.id, CASE WHEN __common_expr_1 THEN TRY_CAST(embucket.public.merge_source.description AS Utf8) ELSE embucket.public.merge_target.description END AS description, embucket.public.merge_target.__data_file_path, embucket.public.merge_target.__manifest_file_path, __target_exists, __source_exists, __common_expr_1 AS __merge_row_updated, Boolean(false) AS __merge_row_inserted |",
        "|               |     Projection: __target_exists AND __source_exists AS __common_expr_1, embucket.public.merge_target.id, embucket.public.merge_target.description, embucket.public.merge_target.__data_file_path, embucket.public.merge_target.__manifest_file_path, __target_exists, embucket.public.merge_source.id, embucket.public.merge_source.description, __source_exists                                                              |",
        "|               |       Full Join: embucket.public.merge_target.id = embucket.public.merge_source.id                                                                                                    |",
        "|               |         LeftSemi Join: embucket.public.merge_target.__data_file_path = embucket.public.merge_target.__data_file_path                                                                                                    |",
        "|               |           Projection: embucket.public.merge_target.id, embucket.public.merge_target.description, embucket.public.merge_target.__data_file_path, embucket.public.merge_target.__manifest_file_path, Boolean(true) AS __target_exists                                                                                                    |",
        "|               |             TableScan: embucket.public.merge_target                                                                                                    |",
        "|               |           Aggregate: groupBy=[[embucket.public.merge_target.__data_file_path]], aggr=[[]]                                                                                                    |",
        "|               |             Inner Join: embucket.public.merge_target.id = embucket.public.merge_source.id                                                                                                    |",
        "|               |               Projection: embucket.public.merge_target.id, embucket.public.merge_target.description, embucket.public.merge_target.__data_file_path, embucket.public.merge_target.__manifest_file_path, Boolean(true) AS __target_exists                                                                                                    |",
        "|               |                 TableScan: embucket.public.merge_target                                                                                                    |",
        "|               |               Projection: embucket.public.merge_source.id, embucket.public.merge_source.description, Boolean(true) AS __source_exists                                                                                                    |",
        "|               |                 TableScan: embucket.public.merge_source                                                                                                    |",
        "|               |         Projection: embucket.public.merge_source.id, embucket.public.merge_source.description, Boolean(true) AS __source_exists                                                                                                    |",
        "|               |           TableScan: embucket.public.merge_source                                                                                                    |",
        "| physical_plan | MergeIntoSinkExec                                                                                                    |",
        "|               |   ProjectionExec: expr=[id@1 as id, CASE WHEN __common_expr_1@0 THEN description@7 ELSE description@2 END as description, __data_file_path@3 as __data_file_path, __manifest_file_path@4 as __manifest_file_path, __target_exists@5 as __target_exists, __source_exists@8 as __source_exists, __common_expr_1@0 as __merge_row_updated, false as __merge_row_inserted]                                                        |",
        "|               |     ProjectionExec: expr=[__target_exists@4 AND __source_exists@7 as __common_expr_1, id@0 as id, description@1 as description, __data_file_path@2 as __data_file_path, __manifest_file_path@3 as __manifest_file_path, __target_exists@4 as __target_exists, id@5 as id, description@6 as description, __source_exists@7 as __source_exists]                                                                                 |",
        "|               |       RepartitionExec: partitioning=RoundRobinBatch([N]), input_partitions=[N]                                                                                                    |",
        "|               |         CoalesceBatchesExec: target_batch_size=8192                                                                                                    |",
        "|               |           CoalesceBatchesExec: target_batch_size=8192                                                                                                    |",
        "|               |             HashJoinExec: mode=CollectLeft, join_type=Full, on=[(id@0, id@0)]                                                                                                    |",
        "|               |               CoalescePartitionsExec                                                                                                    |",
        "|               |                 CoalesceBatchesExec: target_batch_size=8192                                                                                                    |",
        "|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                                    |",
        "|               |                     HashJoinExec: mode=CollectLeft, join_type=LeftSemi, on=[(__data_file_path@2, __data_file_path@0)]                                                                                                    |",
        "|               |                       ProjectionExec: expr=[id@0 as id, description@1 as description, __data_file_path@2 as __data_file_path, __manifest_file_path@3 as __manifest_file_path, true as __target_exists]                                                                                                    |",
        "|               |                         DataSourceExec: file_groups={1 group: [[/[PATH]/testing/data/[HEX]/[UUID].parquet]]}, projection=[id, description, __data_file_path, __manifest_file_path], file_type=parquet                                                                                                    |",
        "|               |                       AggregateExec: mode=FinalPartitioned, gby=[__data_file_path@0 as __data_file_path], aggr=[]                                                                                                    |",
        "|               |                         CoalesceBatchesExec: target_batch_size=8192                                                                                                    |",
        "|               |                           RepartitionExec: partitioning=Hash([__data_file_path@0], [N]), input_partitions=[N]                                                                                                    |",
        "|               |                             CoalesceBatchesExec: target_batch_size=8192                                                                                                    |",
        "|               |                               AggregateExec: mode=Partial, gby=[__data_file_path@2 as __data_file_path], aggr=[]                                                                                                    |",
        "|               |                                 ProjectionExec: expr=[id@3 as id, description@4 as description, __data_file_path@5 as __data_file_path, __manifest_file_path@6 as __manifest_file_path, __target_exists@7 as __target_exists, id@0 as id, description@1 as description, __source_exists@2 as __source_exists]                                                                                                    |",
        "|               |                                   CoalesceBatchesExec: target_batch_size=8192                                                                                                    |",
        "|               |                                     CoalesceBatchesExec: target_batch_size=8192                                                                                                    |",
        "|               |                                       HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(id@0, id@0)]                                                                                                    |",
        "|               |                                         ProjectionExec: expr=[id@0 as id, description@1 as description, true as __source_exists]                                                                                                    |",
        "|               |                                           DataSourceExec: file_groups={1 group: [[/[PATH]/testing/data/[HEX]/[UUID].parquet]]}, projection=[id, description], file_type=parquet                                                                                                    |",
        "|               |                                         RepartitionExec: partitioning=RoundRobinBatch([N]), input_partitions=[N]                                                                                                    |",
        "|               |                                           ProjectionExec: expr=[id@0 as id, description@1 as description, __data_file_path@2 as __data_file_path, __manifest_file_path@3 as __manifest_file_path, true as __target_exists]                                                                                                    |",
        "|               |                                             DataSourceExec: file_groups={1 group: [[/[PATH]/testing/data/[HEX]/[UUID].parquet]]}, projection=[id, description, __data_file_path, __manifest_file_path], file_type=parquet, predicate=DynamicFilterPhysicalExpr [ true ] AND DynamicFilterPhysicalExpr [ true ]                                                                    |",
        "|               |               ProjectionExec: expr=[id@0 as id, description@1 as description, true as __source_exists]                                                                                                    |",
        "|               |                 DataSourceExec: file_groups={1 group: [[/[PATH]/testing/data/[HEX]/[UUID].parquet]]}, projection=[id, description], file_type=parquet                                                                                                    |",
        "|               |                                                                                                    |",
        "+---------------+----------------------------------------------------------------------------------------------------------------------------------+",
    ],
)
