crates/executor/src/tests/sql/ddl/snapshots/merge_into/query_merge_into_from_view.snap
---
source: crates/executor/src/tests/sql/ddl/merge_into.rs
description: "\"SELECT count(CASE WHEN description = 'updated row' THEN 1 ELSE NULL END) updated, count(CASE WHEN description = 'existing row' THEN 1 ELSE NULL END) existing FROM embucket.public.merge_target\""
info: "Setup queries: CREATE TABLE embucket.public.merge_target (ID INTEGER, description VARCHAR); CREATE TABLE embucket.public.merge_source_table (ID INTEGER, description VARCHAR); INSERT INTO embucket.public.merge_target VALUES (1, 'existing row'), (2, 'existing row'); INSERT INTO embucket.public.merge_source_table VALUES (2, 'updated row'), (3, 'new row'); CREATE VIEW embucket.public.merge_source AS SELECT * FROM embucket.public.merge_source_table; MERGE INTO merge_target USING merge_source ON merge_target.id = merge_source.id WHEN MATCHED THEN UPDATE SET description = merge_source.description WHEN NOT MATCHED THEN INSERT (id, description) VALUES (merge_source.id, merge_source.description)"
---
Ok(
    [
        "+---------+----------+",
        "| updated | existing |",
        "+---------+----------+",
        "| 1       | 1        |",
        "+---------+----------+",
    ],
)
